app/app.global.css
/* ... */
.list-current-state{font-size:11px;line-height:15px;display:block;margin-top:0;color:rgba(8,8,9,.3);}
.booklist-wrap,.col-list-name{color:inherit;}

/* Browser content */
.col-content{width:100%;margin-left:210px;}

/* Content section */
.content-section{position:absolute;top:60px;right:0;left:0;overflow-y:auto;margin-left:226px;}
.beta-v1-0{width:150px;}

/* Views */

/* Views Landing view */

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper{top:0;width:100%;height:100%;}
.site-wrapper-inner{display:table-cell;min-height:100%;vertical-align:top;background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;}
.cover-container{margin-right:auto;margin-left:auto;}
.out-block-wrap{width:576px;}
.out-block{width:490px;}
.out-form-group{width:490px;margin-left:-80px;}
.app-container{width:101%;}
.app-box-container{float:left;min-height:1px;padding-right:4px;}
.app-box{width:100%;height:auto;}
.text-feat-dash{padding:12px;margin-bottom:0;}
a.view-out-link{color:#494f56;}

/* Deposit view */
.page-header-wrap{display:table;width:100%;}
.page-header{display:table-cell;min-width:100%;height:150px;text-align:center;vertical-align:middle;background-color:#1b1e21;}

/* Temporary position absolute */
.header-logo{position:absolute;top:150px;}

/* Forms */

/* Inline forms */

/* Sets inline forms to have a fixed label container width */
.form-group-control-label{width:150px;}

/* controls the alert boxes when signing up */
div.out-form-group > div > div.alert.alert-dismissible{margin-right:15px;margin-left:178px;}

/* Media queries */

/* Extra small devices (phones, less than 768px) */

/* No media query since this is the default in Bootstrap */

/* Small devices (tablets, 768px and up) */
@media (min-width:768px){
	.view-with-sidebar{padding-left:90px;}
}

/* Medium devices (desktops, 992px and up) */
@media (min-width:992px){
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width:1200px){
}
.fa-green{color:#1d9d74;}
.app-account-identifier{margin-left:10px;}

